projeto_final_sueide_vilela

--- a/analise_exploratoria/analise_exploratoria.ipynb
+++ b/analise_exploratoria/analise_exploratoria.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Carregamento do Base de Dados"
+    "### Carregamento da Base de Dados"
    ]
   },
   {
