--- a/projeto final/projeto.ipynb
+++ b/projeto final/projeto.ipynb
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Limpando a coluna 'Valor removendo o 'R$' e substituindo o ',' por '.'\n",
+    "#Limpando a coluna 'Valor' removendo o 'R$' e substituindo o ',' por '.'\n",
     "df_combinado_financeiro['Valor'] = df_combinado_financeiro['Valor'].str.replace('R$','')\n",
     "df_combinado_financeiro['Valor'] = df_combinado_financeiro['Valor'].str.replace(',','.')\n"
    ]
@@ -520,7 +520,7 @@
     }
    ],
    "source": [
-    "#verificando a df_combinado_financeiro\n",
+    "#Verificando a df_combinado_financeiro\n",
     "df_combinado_financeiro"
    ]
   },
@@ -1466,7 +1466,7 @@
     }
    ],
    "source": [
-    "#calculano tempo da última visita até a data atual.\n",
+    "#calculando tempo da última visita até a data atual.\n",
     "hoje = dt.datetime.today()\n",
     "df_combinado_pacientes['Tempo_Desde_Ultima_Visita'] = hoje - df_combinado_pacientes['Ultima Visita']\n",
     "\n",
@@ -2007,18 +2007,6 @@
    ],
    "source": [
     "df_combinado_pacientes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # #Substituindo os campos vazios por 0 e transformando o resultado em (int)\n",
-    "# df_combinado_pacientes['Cidade'] = df_combinado_pacientes['Cidade'].fillna('Sem preenchimento')\n",
-    "# df_combinado_pacientes['Estado'] = df_combinado_pacientes['Estado'].fillna('Sem preenchimento')\n",
-    "# df_combinado_pacientes['Sexo'] = df_combinado_pacientes['Sexo'].fillna('Sem preenchimento')\n"
    ]
   },
   {
